Changing Planner to be read-only
